# mathoptdev

./: .gitignore  README.md  env.sh  pyproject.toml
examples/: create_jobs.py  download_solution.py  login.py
project_test/: pyproject.toml  test.py
src/mathoptdev/: __init__.py  cli.py  create_jobs.py  queries.py  run_jobs.py  send_request.py  token.py
src/mathoptdev/config/: __init__.py  prod.py
