[project]
name = "mathoptdev"
version = "0.1.0"
description = "Python CLI and SDK for mathopt.dev the platform for mathematical optimization"
readme = "README.md"
authors = [
    { name = "Charly Larocca", email = "larocca.charly@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
