[project]
name = "mathoptdev"
version = "0.1.2"
description = "Python CLI and SDK for mathopt.dev the platform for mathematical optimization"
readme = "README.md"
authors = [
    { name = "Charly Larocca", email = "larocca.charly@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "colorlog>=6.9.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
opt = "mathoptdev.cli:cli"
